[gd_scene load_steps=5 format=3 uid="uid://lnbggmj1jryo"]

[ext_resource type="PackedScene" uid="uid://cl6stp7w7150v" path="res://weapon/weapon_base.tscn" id="1_qcdfr"]
[ext_resource type="Script" path="res://weapon/rocket_launcher/rocket_launcher.gd" id="2_7ntej"]
[ext_resource type="Texture2D" uid="uid://barwjcdd54nuh" path="res://weapon/rocket_launcher/img/rocket_launcher.png" id="2_jy7sq"]
[ext_resource type="AudioStream" uid="uid://bamij8l81ydk3" path="res://weapon/rocket_launcher/rocket_launcher.wav" id="3_atonm"]

[node name="RocketLauncher" instance=ExtResource("1_qcdfr")]
scale = Vector2(0.405, 0.405)
script = ExtResource("2_7ntej")

[node name="FireRateTimer" type="Timer" parent="." index="0"]
wait_time = 0.34

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
texture = ExtResource("2_jy7sq")
hframes = 2

[node name="FiringSound" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource("3_atonm")

[node name="GunOrigin" parent="." index="3"]
position = Vector2(38, 12)

[node name="ProjectileOrigin" parent="." index="4"]
position = Vector2(89, -5)
gizmo_extents = 10.0

[node name="Camera2D" type="Camera2D" parent="." index="5"]

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
